--- a/Exercise Sets/Exercise 2/about.html
+++ b/Exercise Sets/Exercise 2/about.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <div class="box basic-info">
+            <h2>Basic Info</h2>
+            <p><strong>Name:</strong> Kent Melard D. Pagcaliuangan, BSCS</p>
+            <p><strong>Name:</strong> Date of Birth: October 6, 2003</p>
+            <p><strong>Skills:</strong> HTML & CSS</p>
+        </div>
+        <div class="box contact">
+            <h2>Contact</h2>
+            <p><strong>Email:</strong> ytzilchi@gmail.com</p>
+            <p><strong>Phone:</strong> 09550955185</p>
+            <p><strong>Location:</strong> Lipa City, Batangas</p>
+        </div>
+        <div class="box hobbies">
+            <h2>Hobbies</h2>
+            <p>Esports, Reading, Anime, Gym, Games, & Music</p>
+        </div>
+    </div>
+</body>
+</html>
