--- a/Laboratory Activities/Laboratory Activity 2 - 03-10-2024/visionboard.html
+++ b/Laboratory Activities/Laboratory Activity 2 - 03-10-2024/visionboard.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Vision Board</title>
+</head>
+<body>
+    <h1>Kent Pagcaliuangan's Vision Board</h1>
+    <div class="container">
+        <div class="routine">
+            <img src="assets/routine.jpg" alt="Routine">
+        </div>
+        <div class="images">
+            <img src="assets/consistency.jpg" alt="Consistency">
+            <img src="assets/books.jpg" alt="Books">
+            <img src="assets/esports.jpg" alt="Esports">
+            <img src="assets/music.jpg" alt="Spotify">
+            <img src="assets/workout.jpg" alt="Workout">
+            <img src="assets/you.jpg" alt="You vs You">
+        </div>
+    </div>
+</body>
+</html>
